@@ -154,8 +154,10 @@ if (user_isloggedin()) {
 	//if you aren't logged in, check your browser settings 
 	//and see if we support that language
 	//if we don't support it, just use English as default
-	$res = language_code_to_result ($HTTP_ACCEPT_LANGUAGE);
-	$classfile=db_result($res,0,'filename');
+	if ($HTTP_ACCEPT_LANGUAGE) {
+		$res = language_code_to_result ($HTTP_ACCEPT_LANGUAGE);
+		$classfile=db_result($res,0,'filename');
+	}
 	if (!$classfile) $classfile="${sys_lang}.class";
 	include ("languages/$classfile");
 	$classname=db_result($res,0,'classname');
